时间线完成

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fontsource/roboto": "5.2.5",
     "@mdi/font": "7.4.47",
     "@vueuse/core": "^13.2.0",
+    "etro": "^0.12.1",
     "gsap": "^3.13.0",
     "install": "^0.13.0",
     "pinia": "^3.0.2",
@@ -24,6 +25,7 @@
     "splitpanes": "^4.0.3",
     "vue": "^3.5.13",
     "vue3-moveable": "^0.28.0",
+    "vuedraggable": "^4.1.0",
     "vuetify": "^3.8.1"
   },
   "devDependencies": {
