--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "splitpanes": "^4.0.3",
     "vue": "^3.5.13",
     "vue3-moveable": "^0.28.0",
+    "vue3-selecto": "^1.12.3",
     "vuedraggable": "^4.1.0",
     "vuetify": "^3.8.1"
   },
