--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "pinia": "^3.0.2",
     "pinia-plugin-persistedstate": "^4.3.0",
     "splitpanes": "^4.0.3",
+    "uuid": "^11.1.0",
     "vue": "^3.5.13",
     "vue3-moveable": "^0.28.0",
     "vue3-selecto": "^1.12.3",
